tests/constructor_type/constructor_type.exp
Error ----------------------------------------------------------------------------------------- constructor_type.js:11:8

Cannot call `c2` with `"bad"` bound to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   constructor_type.js:11:8
   11| new c2("bad"); // ERROR: string incompatible with number
              ^^^^^ [1]

References:
   constructor_type.js:8:29
    8| type CtorWithArgs = new (x: number) => {v: string};
                                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- constructor_type.js:23:5

Cannot use `new` on `NotConstructable` [1]. Only classes and interfaces with a construct signature can be constructed.
[invalid-constructor]

   constructor_type.js:23:5
   23| new nc(); // ERROR: invalid-constructor
           ^^

References:
   constructor_type.js:22:19
   22| declare const nc: NotConstructable;
                         ^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- constructor_type.js:39:12

Cannot get `create(...).b` because property `b` is missing in `A1` [1]. [prop-missing]

   constructor_type.js:39:12
   39| create(A1).b;             // ERROR — nominal: A1 has no `b`
                  ^

References:
   constructor_type.js:35:7
   35| class A1 { a: number = 1 }
             ^^ [1]


Error ---------------------------------------------------------------------------------------- constructor_type.js:47:13

Cannot call `instantiate` with `CtorArgs` bound to `C` because in the first argument: string [1] is incompatible with
number [2]. [incompatible-type]

   constructor_type.js:47:13
   47| instantiate(CtorArgs, "bad", "s"); // ERROR — number expected
                   ^^^^^^^^

References:
   constructor_type.js:47:23
   47| instantiate(CtorArgs, "bad", "s"); // ERROR — number expected
                             ^^^^^ [1]
   constructor_type.js:45:33
   45| class CtorArgs { constructor(x: number, y: string) {} }
                                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- constructor_type.js:55:25

Cannot assign `makeOne(...)` to `same1bad` because `Same2` [1] is incompatible with `Same1` [2]. [incompatible-type]

   constructor_type.js:55:25
   55| const same1bad: Same1 = makeOne(Same2);   // ERROR — Same2 is not Same1
                               ^^^^^^^^^^^^^^

References:
   constructor_type.js:52:7
   52| class Same2 { v: number = 0 }
             ^^^^^ [1]
   constructor_type.js:55:17
   55| const same1bad: Same1 = makeOne(Same2);   // ERROR — Same2 is not Same1
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------- constructor_type.js:67:32

Cannot assign `ctorVal` to `ctorAsClass` because interface type [1] is incompatible with statics of `A1` [2].
[incompatible-type]

   constructor_type.js:67:32
   67| const ctorAsClass: Class<A1> = ctorVal; // ERROR — construct sig is not Class<A1>
                                      ^^^^^^^

References:
   constructor_type.js:66:24
   66| declare const ctorVal: new () => A1;
                              ^^^^^^^^^^^^ [1]
   constructor_type.js:67:20
   67| const ctorAsClass: Class<A1> = ctorVal; // ERROR — construct sig is not Class<A1>
                          ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- constructor_type.js:81:36

Cannot assign `NeedsArg` to `fNeeds` because function [1] requires another argument from function type [2].
[incompatible-type]

   constructor_type.js:81:36
   81| const fNeeds: new () => NeedsArg = NeedsArg;  // ERROR — arity mismatch
                                          ^^^^^^^^

References:
   constructor_type.js:80:18
   80| class NeedsArg { constructor(x: number) {} }
                        ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   constructor_type.js:81:15
   81| const fNeeds: new () => NeedsArg = NeedsArg;  // ERROR — arity mismatch
                     ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- constructor_type.js:88:30

Cannot assign `ctorObj` to `ctorC8` because in the return value: object type [1] is incompatible with `C8` [2].
[incompatible-type]

   constructor_type.js:88:30
   88| const ctorC8: new () => C8 = ctorObj;  // ERROR — {v: number} is not C8 nominally
                                    ^^^^^^^

References:
   constructor_type.js:87:34
   87| declare const ctorObj: new () => {v: number};
                                        ^^^^^^^^^^^ [1]
   constructor_type.js:88:25
   88| const ctorC8: new () => C8 = ctorObj;  // ERROR — {v: number} is not C8 nominally
                               ^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:10:28

Cannot assign array literal to `fp2` because in index `1`: number [1] is incompatible with string [2].
[incompatible-type]

   utilities.js:10:28
   10| const fp2: FooParams = [1, 2]; // ERROR: number incompatible with string
                                  ^ [1]

References:
   utilities.js:5:31
    5|     constructor(x: number, y: string) { this.x = x; }
                                     ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:21:27

Cannot assign array literal to `cp2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:21:27
   21| const cp2: CWTA_Params = ["bad", true]; // ERROR: string incompatible with number
                                 ^^^^^ [1]

References:
   utilities.js:18:32
   18| type CtorWithTwoArgs = new (a: number, b: boolean) => {v: string};
                                      ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:28:35

Cannot instantiate `ConstructorParameters` because in type argument `T`: string [1], a primitive, cannot be used as a
subtype of interface type [2]. You can wrap it in `new String(...))` to turn it into an object and attempt to use it as
a subtype of an interface. [incompatible-type]

   utilities.js:28:35
     28| type Bad1 = ConstructorParameters<string>; // ERROR: string is not a constructor
                                           ^^^^^^ [1]

References:
   <BUILTINS>/core.js:3161:38
   3161| type ConstructorParameters<T extends new (...args: ReadonlyArray<empty>) => unknown> =
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:29:26

Cannot instantiate `InstanceType` because in type argument `T`: a construct signature declaring the expected parameter /
return type is missing in statics of function type [1] but exists in interface type [2]. [incompatible-type]

   utilities.js:29:26
     29| type Bad2 = InstanceType<() => void>; // ERROR: function is not a constructor
                                  ^^^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:3165:29
   3165| type InstanceType<T extends new (...args: ReadonlyArray<empty>) => unknown> =
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ utilities.js:48:5

Cannot call `Overloaded` because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

   utilities.js:48:5
   48| new Overloaded(true); // ERROR: neither overload accepts boolean
           ^^^^^^^^^^

References:
   utilities.js:48:16
   48| new Overloaded(true); // ERROR: neither overload accepts boolean
                      ^^^^ [1]
   utilities.js:43:20
   43|     constructor(x: number): void;
                          ^^^^^^ [2]
   utilities.js:44:20
   44|     constructor(x: string): void;
                          ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------- utilities.js:51:32

Cannot assign array literal to `op2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:51:32
   51| const op2: OverloadedParams = ["s"]; // ERROR in Flow (first overload); TS would accept
                                      ^^^ [1]

References:
   utilities.js:43:20
   43|     constructor(x: number): void;
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ utilities.js:72:5

Cannot use `new` on `QuotedNew` [1]. Only classes and interfaces with a construct signature can be constructed.
[invalid-constructor]

   utilities.js:72:5
   72| new q(); // ERROR: not a constructor
           ^

References:
   utilities.js:70:18
   70| declare const q: QuotedNew;
                        ^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ utilities.js:79:5

Cannot use `new` on `OptionalNew` [1]. Only classes and interfaces with a construct signature can be constructed.
[invalid-constructor]

   utilities.js:79:5
   79| new o(); // ERROR: not a constructor (no inst_construct_t slot)
           ^

References:
   utilities.js:78:18
   78| declare const o: OptionalNew;
                        ^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- utilities.js:85:28

Cannot assign array literal to `bp_bad` because array literal [1] has 1 element but tuple type [2] has 0 elements.
[invalid-tuple-arity]

   utilities.js:85:28
   85| const bp_bad: BareParams = [1]; // ERROR: default ctor takes no args
                                  ^^^ [1]

References:
   utilities.js:85:15
   85| const bp_bad: BareParams = [1]; // ERROR: default ctor takes no args
                     ^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:98:32

Cannot assign array literal to `dp_bad` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:98:32
   98| const dp_bad: DerivedParams = ["s"]; // ERROR: inherited ctor wants number
                                      ^^^ [1]

References:
   utilities.js:93:20
   93|     constructor(x: number) { this.x = x; }
                          ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:112:29

Cannot assign array literal to `mcp2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:112:29
   112| const mcp2: MyCtorParams = ["bad"]; // ERROR: string incompatible with number
                                    ^^^^^ [1]

References:
   utilities.js:108:12
   108|     new(x: number): {v: string};
                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:127:32

Cannot assign array literal to `ccp2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:127:32
   127| const ccp2: ChildCtorParams = ["bad"]; // ERROR: string incompatible with number
                                       ^^^^^ [1]

References:
   utilities.js:119:12
   119|     new(x: number): {tag: "parent"};
                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:145:5

Cannot call `cb2` because: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with number [3].

   utilities.js:145:5
   145| new cb2(true); // ERROR: neither overload accepts boolean
            ^^^

References:
   utilities.js:145:9
   145| new cb2(true); // ERROR: neither overload accepts boolean
                ^^^^ [1]
   utilities.js:138:12
   138|     new(x: string): {kind: "child"};
                   ^^^^^^ [2]
   utilities.js:135:12
   135|     new(x: number): {kind: "parent"};
                   ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------- utilities.js:151:32

Cannot assign array literal to `cbb2` because in index `0`: number [1] is incompatible with string [2].
[incompatible-type]

   utilities.js:151:32
   151| const cbb2: ChildBothParams = [1];    // ERROR in Flow (first = Child wants string); TS would accept
                                       ^ [1]

References:
   utilities.js:138:12
   138|     new(x: string): {kind: "child"};
                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:170:5

Cannot call `cto` because: [incompatible-type]
 - Either object literal [1] is incompatible with string [2].
 - Or object literal [1] is incompatible with boolean [3].
 - Or object literal [1] is incompatible with number [4].

   utilities.js:170:5
   170| new cto({}); // ERROR: no overload matches object
            ^^^

References:
   utilities.js:170:9
   170| new cto({}); // ERROR: no overload matches object
                ^^ [1]
   utilities.js:160:12
   160|     new(x: string): {kind: "child-s"};
                   ^^^^^^ [2]
   utilities.js:161:12
   161|     new(x: boolean): {kind: "child-b"};
                   ^^^^^^^ [3]
   utilities.js:135:12
   135|     new(x: number): {kind: "parent"};
                   ^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- utilities.js:186:31

Cannot assign array literal to `cbp2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:186:31
   186| const cbp2: CtorBothParams = ["s"]; // ERROR in Flow (first overload); TS would accept
                                      ^^^ [1]

References:
   utilities.js:176:28
   176| interface CtorNum { new(x: number): {a: number} }
                                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:209:30

Cannot assign array literal to `gip2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:209:30
   209| const gip2: GenInstParams = ["s"]; // ERROR: string incompatible with number
                                     ^^^ [1]

References:
   utilities.js:207:58
   207| type GenInstParams = ConstructorParameters<Class<GenBase<number>>>;
                                                                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:213:1

Cannot cast `gii.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   utilities.js:213:1
   213| gii.x as string; // ERROR: number incompatible with string
        ^^^^^

References:
   utilities.js:210:51
   210| type GenInstInstance = InstanceType<Class<GenBase<number>>>;
                                                          ^^^^^^ [1]
   utilities.js:213:10
   213| gii.x as string; // ERROR: number incompatible with string
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:223:29

Cannot assign array literal to `bp2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:223:29
   223|   const bp2: BoundParams = ["s"]; // ERROR: string incompatible with number
                                    ^^^ [1]

References:
   utilities.js:220:30
   220| function genBound<X: GenBase<number>>(): void {
                                     ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:227:3

Cannot cast `bi.x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   utilities.js:227:3
   227|   bi.x as string; // ERROR: number incompatible with string
          ^^^^

References:
   utilities.js:220:30
   220| function genBound<X: GenBase<number>>(): void {
                                     ^^^^^^ [1]
   utilities.js:227:11
   227|   bi.x as string; // ERROR: number incompatible with string
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:232:2

Cannot cast object literal to interface type because a construct signature declaring the expected parameter / return
type is missing in object literal [1] but exists in interface type [2]. [incompatible-type]

   utilities.js:232:2
   232| ({foo: 1}) as interface { new(): number; foo: number }; // ERROR: missing construct sig (no extra "Cannot use new on" noise)
         ^^^^^^^^ [1]

References:
   utilities.js:232:15
   232| ({foo: 1}) as interface { new(): number; foo: number }; // ERROR: missing construct sig (no extra "Cannot use new on" noise)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:247:5

Cannot call `cfn` with `"bad"` bound to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   utilities.js:247:5
   247| cfn("bad"); // ERROR: call sig wants number
            ^^^^^ [1]

References:
   utilities.js:239:9
   239|     (x: number): {called: number};
                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- utilities.js:248:9

Cannot call `cfn` with `1` bound to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   utilities.js:248:9
   248| new cfn(1); // ERROR: construct sig wants string
                ^ [1]

References:
   utilities.js:240:12
   240|     new(x: string): {constructed: string};
                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:260:18

Cannot call `HasStaticNew` because no arguments are expected by default constructor [1]. [extra-arg]

   utilities.js:260:18
   260| new HasStaticNew(1); // ERROR: default ctor takes no args (proves `static new` isn't the construct sig)
                         ^

References:
   utilities.js:254:15
   254| declare class HasStaticNew {
                      ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- utilities.js:273:68

Cannot assign `SubjAA` to `SubjAA_via_iface_bad` because in the first parameter: number [1] is incompatible with
string [2]. [incompatible-type]

   utilities.js:273:68
   273| const SubjAA_via_iface_bad: interface { new(x: string): SubjAA } = SubjAA; // ERROR: ctor wants number, not string
                                                                           ^^^^^^

References:
   utilities.js:269:20
   269|     constructor(x: number) { this.x = x; }
                           ^^^^^^ [1]
   utilities.js:273:48
   273| const SubjAA_via_iface_bad: interface { new(x: string): SubjAA } = SubjAA; // ERROR: ctor wants number, not string
                                                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:285:34

Cannot assign array literal to `fcp2` because in index `1`: number [1] is incompatible with string [2].
[incompatible-type]

   utilities.js:285:34
   285| const fcp2: FooClassParams = [1, 2]; // ERROR: number incompatible with string
                                         ^ [1]

References:
   utilities.js:5:31
     5|     constructor(x: number, y: string) { this.x = x; }
                                      ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- utilities.js:295:31

Cannot assign array literal to `fap2` because in index `0`: string [1] is incompatible with number [2].
[incompatible-type]

   utilities.js:295:31
   295| const fap2: FooAliasParams = ["bad", "s"]; // ERROR: string incompatible with number
                                      ^^^^^ [1]

References:
   utilities.js:5:20
     5|     constructor(x: number, y: string) { this.x = x; }
                           ^^^^^^ [2]



Found 35 errors
